--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="lib/css/index.css" />
+    <link rel="stylesheet" href="libs/css/index.css" />
     <title> Pyan </title>
 </head>
 
