--- a/client/src/index.html
+++ b/client/src/index.html
@@ -12,6 +12,7 @@
     <div class="root"></div>
     
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
     <script type="module" src="index.js"></script>
 </body>
 
