--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,15 @@
 
 <head>    
     <meta charset="utf-8" />
-    <title>고양이 사진첩!</title>
+    <title>PYAN-BOARD</title>
     <link rel="stylesheet" href="../src/styles/index.css"/>
-    <script src="../src/index.js" type="module"></script>
 </head>
 
 <body>
-    <h1>고양이 사진첩</h1>
+    <h1>PYAN-BOARD</h1>
     <main class="app"></main>
+    
+    <script src="../src/index.js" type="module"></script>
 </body>
 
 </html>
