--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <h1>PYAN-BOARD</h1>
     <main class="app"></main>
-    
+
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js"></script>
     <script src="../src/index.js" type="module"></script>
 </body>
 
